# nicbudd.github.io

./: .gitignore  16b64.html  Acheivements.html  Blog.html  CNAME  Changelog.html  Cordovish.html  CubeSim.html  CubeSimCode.html  CubeStuff.html  Debt.html  GarlicAlfredoSauce.html  HowISolveRubiksCubeEasy.html  HowToSolve.html  HowToSolveEasy.html  HowToSolveHard.html  Javascript Experiments.html  MEDIC.html  METAR Decoder.js  ML78022258B.html  Menu.js  NWO.html  Nicbudd.css  NicbuddStyleSheet.css  NicbuddsPages.html  Other.html  Overwatch ELO.js  OwO whats this. notices buldge.html  Physics2DMotion.js  PrintableSkeletonFile.html  README.md  RubiksStuff.html  SA warning scale.html  SAwarningSignals.html  SkeletonFile.html  TheElderScrolls.css  Tropical Weather.html  TropicalWeather.html  Weather.html  WeatherHomePage.html  (+64 more)
2017Wishlist/: common.css  instructions.html  wishlist.html
BirthdayBoi2.0/: Your_Mission.html  readme.txt
CSS Experiments/: Project1.html  gradients.css  gradients.html  importblank.js  ooer.css  ooer.html  ooer.js
INVASION_DOCUMENTS/: Good Job.html  INVASION_DOCUMENTS.7z
New/: aboutMe.html  algs.html  conlangs.html  cubeHome.html  index.css  index.html  index.js  javascript.html  monkeyleague.html  other.html  skeletonFile.html  testpage.html  threeCube.html  zythe.html
New folder/: Cordovish.html
PZ/: aboutzerb.html  contactzerb.html  desktop.ini  import.js  index.html  index.js  (+7 more)
i16b64/: Cargo.toml
i16b64/pkg/: package.json  webi16b64.d.ts  webi16b64.js  webi16b64_bg.wasm  webi16b64_bg.wasm.d.ts
i16b64/src/: interpreter.rs  lib.rs
(+155 files in other folders)
