[package]
name = "webi16b64"
version = "0.1.0"
authors = ["Nicbudd"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
wasm-bindgen = "0.2.79"
getrandom = { version = "0.2", features = ["js"]}
rand = "0.8.5"


[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
